# mygoj

./: .env  .gitignore  Cargo.toml  README.md  init.py
.zed/: settings.json
crates/front/: .gitignore  Cargo.toml  Dioxus.toml
crates/front/assets/: loading-dialog.css
crates/front/src/: error.rs  file_view.rs  home.rs  judge_status.rs  login.rs  login_outdated.rs  logout.rs  main.rs  md.rs  navbar.rs  notfound.rs  problem.rs  problem_edit.rs  problem_file_download.rs  problem_file_list.rs  problem_file_view.rs  problem_pages.rs  record.rs  register.rs  sleep.js  submit.rs  utility.rs
crates/front/src/components/: mod.rs
crates/judge/: Cargo.toml
crates/judge/src/: comp.rs  judge.rs  lib.rs
crates/server/: Cargo.toml
crates/server/src/: db.rs  dbg.rs  error.rs  front.rs  init.rs  judge.rs  lib.rs  problem.rs  record.rs  serve.rs  submission.rs  user.rs
crates/server/src/init/: mod.rs
crates/server/src/init/embed/: mod.rs  problems.rs
crates/server/src/init/embed/a+b/: codeonly.md  fate.md  many.md
crates/server/src/init/embed/complex_fs/: statement.md
crates/server/src/problem/: cache.rs  db.rs  files.rs  mod.rs  pages.rs  problem_lock.rs
crates/server/src/record/: cache.rs  db.rs  mod.rs
crates/server/src/sql/: create.sql
crates/server/src/user/: cache.rs  db.rs  mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: constant.rs  download.rs  error.rs  front.rs  headers.rs  judge.rs  lib.rs  problem.rs  record.rs  submission.rs  token.rs  user.rs
crates/shared/src/problem/: mod.rs
crates/shared/src/record/: mod.rs
crates/testbox/: .gitignore  Cargo.toml
crates/testbox/src/: error.rs  lib.rs
crates/testbox/src/linux/: mod.rs
crates/testbox/tests/: array_memory.cpp  mod.rs  normal.cpp  timeout.cpp  vector_memory.cpp
