[workspace]
resolver = "3"
members = [
  "crates/front",
  "crates/judge",
  "crates/server",
  "crates/shared",
  "crates/testbox"
]

[workspace.dependencies]
compact_str = { version = "0.9.0", features = ["serde"] }
chrono = "0.4.42"
clap = "4.5.53"
dashmap = "6.1.0"
dirs = "6.0.0"
eyre = "0.6.12"
libc = "0.2.178"
nix = { version = "0.30.1", features = ["process"] }
reqwest = { version = "0.12.25", features = ["json"] }
static_init = "1.0.4"
rust-embed = "8.9.0"
salvo = "0.85.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.37.2"
thiserror = "2.0.17"
tokio = "1.48.0"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
