[workspace]
resolver = "3"
members = [
  "crates/front",
  "crates/judge",
  "crates/server",
  "crates/shared",
  "crates/testbox",
]

[workspace.dependencies]
axum = { version = "0.8.7", features = ["macros", "ws"] }
axum-extra = { version = "0.12.2", features = [
  "async-read-body",
  "query",
  "typed-header"
] }
bytes = "1.11.0"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
compact_str = { version = "0.9.0", features = ["serde"] }
dashmap = "6.1.0"
dirs = "6.0.0"
either = "1.15.0"
eyre = "0.6.12"
futures-util = "0.3.31"
getrandom = "0.3.4"
hex = "0.4.3"
itertools = "0.14.0"
libc = "0.2.178"
nix = { version = "0.30.1", features = ["process"] }
papaya = "0.2.3"
rand = "0.9.2"
reqwest = { version = "0.12.25", features = ["json"] }
rust-embed = "8.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
static_init = "1.0.4"
sysinfo = "0.37.2"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = "1.48.0"
tokio-util = { version = "0.7.17", features = ["io"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "request-id", "timeout"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
