[package]
name = "front"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes.workspace = true
compact_str.workspace = true
dioxus = { version = "0.7.2", features = ["router", "web"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
eyre.workspace = true
futures-util.workspace = true
getrandom = { workspace = true, features = ["wasm_js"] }
gloo = "0.11.0"
human_bytes = { version = "0.4.3", features = ["si-units"] }
itertools.workspace = true
katex-rs = "0.2.3"
markdown = "1.0.0"
pharos = "0.5.3"
pulldown-cmark = "0.13.0"
reqwest = { workspace = true, features = ["cookies"] }
serde.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }
uuid = { workspace = true, features = ["js"] }
wasm-bindgen-futures = "0.4.56"
web-sys = { version = "0.3.83", features = [
  "Clipboard",
  "FormData",
  "Navigator",
  "Storage",
  "Window"
] }
ws_stream_wasm = "0.7.5"

[features]
default = ["ws"]
independent = []
ws = []
