[package]
name = "judge"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono.workspace = true
eyre.workspace = true
reqwest = { workspace = true }
serde.workspace = true
shared = { path = "../shared" }
sysinfo = { workspace = true }
testbox = { path = "../testbox" }
tokio = { workspace = true, features = ["full"] }
uuid.workspace = true
