[package]
name = "judge"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono.workspace = true
compact_str.workspace = true
dirs.workspace = true
eyre.workspace = true
reqwest = { workspace = true }
serde.workspace = true
shared = { path = "../shared" }
sysinfo = { workspace = true }
tempfile.workspace = true
testbox = { path = "../testbox" }
tokio = { workspace = true, features = ["full"] }
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
static_init.workspace = true
