[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
axum-extra.workspace = true
chrono.workspace = true
compact_str.workspace = true
dashmap.workspace = true
dirs.workspace = true
eyre.workspace = true
hex.workspace = true
rand.workspace = true
rust-embed = { workspace = true, features = ["debug-embed"] }
serde.workspace = true
serde_json.workspace = true
shared = { path = "../shared", features = ["server"] }
static_init.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
