[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono.workspace = true
compact_str.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
hex.workspace=true
axum={workspace=true,optional=true}
axum-extra={workspace=true,optional=true}
serde_json.workspace=true
eyre.workspace=true

[features]
server=["axum","axum-extra"]
