[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true, optional = true }
axum-extra = { workspace = true, optional = true }
chrono.workspace = true
compact_str.workspace = true
eyre.workspace = true
hex.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[features]
server = ["axum", "axum-extra", "sqlx"]
