[package]
name = "testbox"
version = "0.1.0"
edition = "2024"

[dependencies]
clap.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "process", "rt", "time"] }
wait4 = "0.1.3"

[target.'cfg(any(target_os = "linux"))'.dependencies]
nix = { workspace = true, features = ["signal"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }