[package]
name = "testbox"
version = "0.1.0"
edition = "2024"

[dependencies]
clap.workspace = true
serde.workspace = true
thiserror.workspace = true
sysinfo.workspace=true
tokio = { workspace = true, features = ["fs", "process", "rt", "time"] }
wait4 = "0.1.3"
tracing.workspace=true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[target.'cfg(any(target_os = "linux"))'.dependencies]
nix = { workspace = true, features = ["resource", "signal"] }
